--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,11 +17,9 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
-        format_sql: false
+        format_sql: true
 
     show_sql: true
 
   main:
     web-application-type: servlet
-
-
